continue fix and refactor order api / add jacoco test plugin