@@ -1,54 +1,39 @@
 package me.exrates.openapi.repositories;
 
-import me.exrates.openapi.models.TemporalToken;
 import me.exrates.openapi.models.User;
-import me.exrates.openapi.models.enums.TokenType;
 import me.exrates.openapi.models.enums.UserRole;
-import me.exrates.openapi.models.enums.UserStatus;
+import me.exrates.openapi.repositories.mappers.UserRoleRowMapper;
+import me.exrates.openapi.repositories.mappers.UserRowMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.EmptyResultDataAccessException;
-import org.springframework.jdbc.core.BeanPropertyRowMapper;
-import org.springframework.jdbc.core.RowMapper;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.stereotype.Repository;
 
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 
 @Repository
 public class UserDao {
 
-    private final String SELECT_USER_SQL =
-            "SELECT USER.id, u.email AS parent_email, USER.finpassword, USER.nickname, USER.email, USER.password, USER.regdate, " +
-                    "USER.phone, USER.status, USER_ROLE.name AS role_name FROM USER " +
-                    "INNER JOIN USER_ROLE ON USER.roleid = USER_ROLE.id LEFT JOIN REFERRAL_USER_GRAPH " +
-                    "ON USER.id = REFERRAL_USER_GRAPH.child LEFT JOIN USER AS u ON REFERRAL_USER_GRAPH.parent = u.id ";
+    private static final String SELECT_USER_SQL = "SELECT u.id, pu.email AS parent_email, u.finpassword, u.nickname, u.email, " +
+            "u.password, u.regdate, u.phone, u.status, ur.name AS role_name" +
+            " FROM USER u" +
+            " INNER JOIN USER_ROLE ur ON u.roleid = ur.id" +
+            " LEFT JOIN REFERRAL_USER_GRAPH rug ON u.id = rug.child" +
+            " LEFT JOIN USER pu ON rug.parent = pu.id" +
+            " WHERE u.id = :user_id";
+
+    private static final String GET_USER_ROLE_BY_EMAIL_SQL = "SELECT ur.name as role_name" +
+            " FROM USER u" +
+            " JOIN USER_ROLE ur on u.roleid = ur.id" +
+            " WHERE u.email = :email";
+
+    private final NamedParameterJdbcTemplate jdbcTemplate;
 
     @Autowired
-    private NamedParameterJdbcTemplate npJdbcTemplate;
-
-    private RowMapper<User> getUserRowMapper() {
-        return (resultSet, i) -> {
-            final User user = new User();
-            user.setId(resultSet.getInt("id"));
-            user.setNickname(resultSet.getString("nickname"));
-            user.setEmail(resultSet.getString("email"));
-            user.setPassword(resultSet.getString("password"));
-            user.setRegdate(resultSet.getDate("regdate"));
-            user.setPhone(resultSet.getString("phone"));
-            user.setStatus(UserStatus.values()[resultSet.getInt("status") - 1]);
-            user.setRole(UserRole.valueOf(resultSet.getString("role_name")));
-            user.setFinpassword(resultSet.getString("finpassword"));
-            try {
-                user.setParentEmail(resultSet.getString("parent_email")); // May not exist for some users
-            } catch (final SQLException e) {/*NOP*/}
-            return user;
-        };
+    public UserDao(NamedParameterJdbcTemplate jdbcTemplate) {
+        this.jdbcTemplate = jdbcTemplate;
     }
 
     //+
@@ -57,7 +42,7 @@ public class UserDao {
         Map<String, String> namedParameters = new HashMap<>();
         namedParameters.put("email", email);
         try {
-            return npJdbcTemplate.queryForObject(sql, namedParameters, Integer.class);
+            return jdbcTemplate.queryForObject(sql, namedParameters, Integer.class);
         } catch (EmptyResultDataAccessException e) {
             return 0;
         }
@@ -68,15 +53,7 @@ public class UserDao {
         String sql = "select USER_ROLE.name as role_name from USER " +
                 "inner join USER_ROLE on USER.roleid = USER_ROLE.id where USER.id = :id ";
         Map<String, Integer> namedParameters = Collections.singletonMap("id", id);
-        return npJdbcTemplate.queryForObject(sql, namedParameters, (rs, row) -> UserRole.valueOf(rs.getString("role_name")));
-    }
-
-    //+
-    public User getUserById(int id) {
-        String sql = SELECT_USER_SQL + "WHERE USER.id = :id";
-        Map<String, String> namedParameters = new HashMap<>();
-        namedParameters.put("id", String.valueOf(id));
-        return npJdbcTemplate.queryForObject(sql, namedParameters, getUserRowMapper());
+        return jdbcTemplate.queryForObject(sql, namedParameters, (rs, row) -> UserRole.valueOf(rs.getString("role_name")));
     }
 
     //+
@@ -85,19 +62,7 @@ public class UserDao {
         Map<String, Integer> namedParameters = new HashMap<>();
         namedParameters.put("id", userId);
         try {
-            return npJdbcTemplate.queryForObject(sql, namedParameters, String.class);
-        } catch (EmptyResultDataAccessException e) {
-            return null;
-        }
-    }
-
-    //+
-    public String getPreferredLangByEmail(String email) {
-        String sql = "SELECT preferred_lang FROM USER WHERE email = :email";
-        Map<String, String> namedParameters = new HashMap<>();
-        namedParameters.put("email", email);
-        try {
-            return npJdbcTemplate.queryForObject(sql, namedParameters, String.class);
+            return jdbcTemplate.queryForObject(sql, namedParameters, String.class);
         } catch (EmptyResultDataAccessException e) {
             return null;
         }
@@ -106,15 +71,22 @@ public class UserDao {
     //+
     public String getEmailById(Integer id) {
         String sql = "SELECT email FROM USER WHERE id = :id";
-        return npJdbcTemplate.queryForObject(sql, Collections.singletonMap("id", id), String.class);
+        return jdbcTemplate.queryForObject(sql, Collections.singletonMap("id", id), String.class);
+    }
+
+    //+
+    public User getUserById(int userId) {
+        return jdbcTemplate.queryForObject(
+                SELECT_USER_SQL,
+                Map.of("user_id", userId),
+                UserRowMapper.map());
     }
 
     //+
     public UserRole getUserRoleByEmail(String email) {
-        String sql = "select USER_ROLE.name as role_name from USER " +
-                "inner join USER_ROLE on USER.roleid = USER_ROLE.id where USER.email = :email ";
-        Map<String, String> namedParameters = Collections.singletonMap("email", email);
-        return npJdbcTemplate.queryForObject(sql, namedParameters, (rs, row) ->
-                UserRole.valueOf(rs.getString("role_name")));
+        return jdbcTemplate.queryForObject(
+                GET_USER_ROLE_BY_EMAIL_SQL,
+                Map.of("email", email),
+                UserRoleRowMapper.map());
     }
 }
